[project]
name = "sysdiagnose-tools"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.13"
keywords = ["apple", "mobiledevice", "mobile device", "ios", "macos", "tvos", "xros", "visionos", "sysdiagnose"]
version = "2025.04.01"
authors = [
    {name="@Riigess", email = "56428356+Riigess@users.noreply.github.com"}
]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Documentation = "https://github.com/Riigess/sysdiagnose-tools/tree/library/docs"
Repository = "https://github.com/Riigess/sysdiagnose-tools"
Issues = "https://github.com/Riigess/sysdiagnose-tools/issues"

[build-system]
requires = [
]
